# 1code

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  docker-compose.yml  pyproject.toml
backend/: uwsgi.ini
backend/backend/: settings.py  storages.py  urls.py
backend/users/: admin.py  models.py  urls.py
backend/users/migrations/: 0001_initial.py
frontend/: .prettierrc  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
