[tool.poetry]
name = "1code"
version = "1.0.0"
description = ""
authors = ["zagoruykov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.7"
django-cors-headers = "^3.7.0"
djangorestframework = "^3.12.2"
django-rest-auth = "^0.9.5"
django-storages = "^1.11.1"
django-environ = "^0.4.5"
boto3 = "^1.17.22"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
